# uvicorn-gunicorn-fastapi-docker

./: .travis.yml  LICENSE  Pipfile  README.md  backup.travis.yml  docker-compose.build.yml  pyproject.toml  release-notes.md
.github/: dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: privileged.yml
.github/workflows/: deploy.yml  issue-manager.yml  latest-changes.yml  test.yml  zizmor.yml
FastAPI_MOLOG_WMS/: README.md
docker-images/: python3.10-alpine3.15.dockerfile  python3.10-slim.dockerfile  python3.10.dockerfile  python3.11-slim.dockerfile  python3.11.dockerfile  python3.12-slim.dockerfile  python3.12.dockerfile  python3.6-alpine3.8.dockerfile  python3.6.dockerfile  python3.7-alpine3.8.dockerfile  python3.7.dockerfile  python3.8-alpine3.10.dockerfile  python3.8-slim.dockerfile  python3.8.dockerfile  python3.9-alpine.dockerfile  python3.9-alpine3.12.dockerfile  python3.9-alpine3.14.dockerfile  python3.9-slim.dockerfile  python3.9.dockerfile  requirements.txt
docker-images/app/: main.py
python3.6/: Dockerfile
python3.6-alpine3.8/: Dockerfile
python3.7/: Dockerfile
python3.7-alpine3.8/: Dockerfile
python3.7-slim/: Dockerfile
python3.8/: Dockerfile
python3.8-alpine3.10/: Dockerfile
python3.8-alpine3.11/: Dockerfile
python3.8-alpine3.11/app/: main.py
scripts/: build-push.sh  build.sh  process_all.py  test.sh
tests/: utils.py
tests/test_01_main/: test_defaults.py
