[tool.poetry]
name = "uvicorn-gunicorn-fastapi-docker"
version = "0.1.0"
description = "Docker image with Uvicorn managed by Gunicorn for high-performance FastAPI web applications in Python 3.7 and 3.6 with performance auto-tuning. Optionally with Alpine Linux."
authors = ["Sebastián Ramírez <tiangolo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
docker = "^4.2.0"
pytest = "^7.0.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.3.1"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
