[tool.poetry]
name = "uvicorn-gunicorn-fastapi-docker"
version = "0.1.0"
description = "Docker image with Uvicorn managed by Gunicorn for high-performance FastAPI web applications in Python with performance auto-tuning."
authors = ["Sebastián Ramírez <tiangolo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
docker = "^6.0.1"
pytest = "^7.0.1"

[tool.poetry.dev-dependencies]
black = "^22.10"
isort = "^5.8.0"
autoflake = "^2.0.0"
mypy = "^0.991"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
